[package]
name = "logger-rust"
version = "0.1.42"
edition = "2021"
authors = ["Albert Munchhausen", "jknoptrix <support@classicpvp.ru>"]
description = "A crate for logger with 4 loggin types and 3 types of level logging"
readme = "README.md"
repository = "https://github.com/jknoptrix/logger-macros"
license-file = "LICENSE"
keywords = ["logger", "macros"]
categories = ["development-tools::debugging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
lazy_static = "1.4.0"
once_cell = "1.18.0"
